force-app/main/default/objects/Product2/fields/ActivityChannel__c.field-meta.xml
<CustomField>
    <fullName>ActivityChannel__c</fullName>
    <label>Canal de Distribuição</label>
    <type>TextArea</type>
</CustomField>