force-app/main/default/objects/Product2/fields/ActivitySection__c.field-meta.xml
<CustomField>
    <fullName>ActivitySection__c</fullName>
    <label>Setor de Atividade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultura</fullName>
            </value>
            <value>
                <fullName>Pecuária</fullName>
            </value>
            <value>
                <fullName>Maquinas Implementos</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Outras Saídas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>