force-app/main/default/objects/Product2/fields/ClasseAvaliacao__c.field-meta.xml
<CustomField>
    <fullName>ClasseAvaliacao__c</fullName>
    <label>Classe Avaliação</label>
    <length>180</length>
    <type>Text</type>
</CustomField>