force-app/main/default/objects/Product2/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <label>Peso Bruto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>