force-app/main/default/objects/Product2/fields/GrossWeightUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightUnitOfMeasure__c</fullName>
    <label>Unidade Medida do Peso Bruto</label>
    <length>180</length>
    <type>Text</type>
</CustomField>