force-app/main/default/objects/Product2/fields/GrupoQuimico__c.field-meta.xml
<CustomField>
    <fullName>GrupoQuimico__c</fullName>
    <label>Grupo Químico</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>