force-app/main/default/objects/Product2/fields/Hierarquia_de_Produtos__c.field-meta.xml
<CustomField>
    <fullName>Hierarquia_de_Produtos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarquia de Produtos</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>