force-app/main/default/objects/Product2/fields/MarcadoEliminacao__c.field-meta.xml
<CustomField>
    <fullName>MarcadoEliminacao__c</fullName>
    <label>Marcado Eliminação</label>
    <length>180</length>
    <type>Text</type>
</CustomField>