force-app/main/default/objects/Product2/fields/Multiplicity__c.field-meta.xml
<CustomField>
    <fullName>Multiplicity__c</fullName>
    <label>Mulitplicidade</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>