force-app/main/default/objects/Product2/fields/NCM__c.field-meta.xml
<CustomField>
    <fullName>NCM__c</fullName>
    <label>NCM</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>