force-app/main/default/objects/Product2/fields/NumeroRegistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroRegistro__c</fullName>
    <externalId>true</externalId>
    <label>Número Registro</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>