force-app/main/default/objects/Product2/fields/OrigemMaterial__c.field-meta.xml
<CustomField>
    <fullName>OrigemMaterial__c</fullName>
    <label>Origem Material</label>
    <length>180</length>
    <type>Text</type>
</CustomField>