force-app/main/default/objects/Product2/fields/PrincipleActive__c.field-meta.xml
<CustomField>
    <fullName>PrincipleActive__c</fullName>
    <label>Princípio Ativo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>