force-app/main/default/objects/Product2/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>