force-app/main/default/objects/Product2/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia de Produtos</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>