force-app/main/default/objects/Product2/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Produtos</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>