force-app/main/default/objects/Product2/fields/ProductGroupX__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupX__c</fullName>
    <label>Grupo de Produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo</valueSetName>
    </valueSet>
</CustomField>