force-app/main/default/objects/Product2/fields/ProductSubgroup2__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroup2__c</fullName>
    <label>SubGrupo de Produtos 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubGrupo2</valueSetName>
    </valueSet>
</CustomField>