force-app/main/default/objects/Product2/fields/ProductSubgroup__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubGrupo de Produtos</label>
    <referenceTo>ProductSubGroup__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>