force-app/main/default/objects/Product2/fields/ProductSubgroupX__c.field-meta.xml
<CustomField>
    <fullName>ProductSubgroupX__c</fullName>
    <label>SubGrupo de Produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubGrupo1</valueSetName>
    </valueSet>
</CustomField>