force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Tipo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZCOM</fullName>
                <label>Commodity</label>
            </value>
            <value>
                <fullName>HAWA</fullName>
                <label>Produto de Revenda</label>
            </value>
            <value>
                <fullName>FERT</fullName>
                <label>Produto Acabado</label>
            </value>
            <value>
                <fullName>DIEN</fullName>
                <label>Serviços</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>