force-app/main/default/objects/Product2/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <label>Unidade de Medida</label>
    <length>180</length>
    <type>Text</type>
</CustomField>